test-package-compiler/tests/snapshots/compiler_tests__future_string_interpolation_codegen.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: core_erlang
---
module 'future_string_interpolation' ['start_link'/1, 'start_link'/2, 'init'/1, 'handle_cast'/2, 'handle_call'/3, 'handle_info'/2, 'code_change'/3, 'terminate'/2, 'dispatch'/4, 'safe_dispatch'/3, 'method_table'/0, 'has_method'/1, 'class_name'/0, 'spawn'/0, 'spawn'/1, 'new'/0, 'new'/1, 'superclass'/0]
  attributes ['behaviour' = ['gen_server']]

'start_link'/1 = fun (InitArgs) ->
    call 'gen_server':'start_link'('future_string_interpolation', InitArgs, [])


'start_link'/2 = fun (ServerName, InitArgs) ->
    call 'gen_server':'start_link'(ServerName, 'future_string_interpolation', InitArgs, [])


'spawn'/0 = fun () ->
    let _OldTrap = call 'erlang':'process_flag'('trap_exit', 'true') in
    let _SpawnResult = call 'gen_server':'start_link'('future_string_interpolation', ~{}~, []) in
    let _ = call 'erlang':'process_flag'('trap_exit', _OldTrap) in
    case _SpawnResult of
        <{'ok', Pid}> when 'true' ->
            let _InstReg = try call 'beamtalk_object_instances':'register'('FutureStringInterpolation', Pid)
                of _RegOk -> _RegOk
                catch <_RegT, _RegE, _RegS> -> 'ok'
            in
            {'beamtalk_object', 'FutureStringInterpolation', 'future_string_interpolation', Pid}
        <{'error', Reason}> when 'true' ->
            let SpawnErr0 = call 'beamtalk_error':'new'('instantiation_error', 'FutureStringInterpolation') in
            let SpawnErr1 = call 'beamtalk_error':'with_selector'(SpawnErr0, 'spawn') in
            call 'beamtalk_error':'raise'(SpawnErr1)
    end


'spawn'/1 = fun (InitArgs) ->
    case call 'erlang':'is_map'(InitArgs) of
        <'false'> when 'true' ->
            let TypeErr0 = call 'beamtalk_error':'new'('type_error', 'FutureStringInterpolation') in
            let TypeErr1 = call 'beamtalk_error':'with_selector'(TypeErr0, 'spawnWith:') in
            let TypeErr2 = call 'beamtalk_error':'with_hint'(TypeErr1, #{#<115>(8,1,'integer',['unsigned'|['big']]),#<112>(8,1,'integer',['unsigned'|['big']]),#<97>(8,1,'integer',['unsigned'|['big']]),#<119>(8,1,'integer',['unsigned'|['big']]),#<110>(8,1,'integer',['unsigned'|['big']]),#<87>(8,1,'integer',['unsigned'|['big']]),#<105>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']]),#<104>(8,1,'integer',['unsigned'|['big']]),#<58>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<120>(8,1,'integer',['unsigned'|['big']]),#<112>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<99>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<97>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<68>(8,1,'integer',['unsigned'|['big']]),#<105>(8,1,'integer',['unsigned'|['big']]),#<99>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']]),#<105>(8,1,'integer',['unsigned'|['big']]),#<111>(8,1,'integer',['unsigned'|['big']]),#<110>(8,1,'integer',['unsigned'|['big']]),#<97>(8,1,'integer',['unsigned'|['big']]),#<114>(8,1,'integer',['unsigned'|['big']]),#<121>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<97>(8,1,'integer',['unsigned'|['big']]),#<114>(8,1,'integer',['unsigned'|['big']]),#<103>(8,1,'integer',['unsigned'|['big']]),#<117>(8,1,'integer',['unsigned'|['big']]),#<109>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<110>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']])}#) in
            call 'beamtalk_error':'raise'(TypeErr2)
        <'true'> when 'true' ->
            let _OldTrap1 = call 'erlang':'process_flag'('trap_exit', 'true') in
            let _SpawnResult1 = call 'gen_server':'start_link'('future_string_interpolation', InitArgs, []) in
            let _ = call 'erlang':'process_flag'('trap_exit', _OldTrap1) in
            case _SpawnResult1 of
                <{'ok', Pid}> when 'true' ->
                    let _InstReg = try call 'beamtalk_object_instances':'register'('FutureStringInterpolation', Pid)
                        of _RegOk -> _RegOk
                        catch <_RegT, _RegE, _RegS> -> 'ok'
                    in
                    {'beamtalk_object', 'FutureStringInterpolation', 'future_string_interpolation', Pid}
                <{'error', Reason}> when 'true' ->
                    let SpawnErr0 = call 'beamtalk_error':'new'('instantiation_error', 'FutureStringInterpolation') in
                    let SpawnErr1 = call 'beamtalk_error':'with_selector'(SpawnErr0, 'spawnWith:') in
                    call 'beamtalk_error':'raise'(SpawnErr1)
            end
    end


'new'/0 = fun () ->
    let Error0 = call 'beamtalk_error':'new'('instantiation_error', 'Actor') in
    let Error1 = call 'beamtalk_error':'with_selector'(Error0, 'new') in
    let Error2 = call 'beamtalk_error':'with_hint'(Error1, #{#<85>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<112>(8,1,'integer',['unsigned'|['big']]),#<97>(8,1,'integer',['unsigned'|['big']]),#<119>(8,1,'integer',['unsigned'|['big']]),#<110>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<105>(8,1,'integer',['unsigned'|['big']]),#<110>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<97>(8,1,'integer',['unsigned'|['big']]),#<100>(8,1,'integer',['unsigned'|['big']])}#) in
    call 'beamtalk_error':'raise'(Error2)

'new'/1 = fun (_InitArgs) ->
    let Error0 = call 'beamtalk_error':'new'('instantiation_error', 'Actor') in
    let Error1 = call 'beamtalk_error':'with_selector'(Error0, 'new:') in
    let Error2 = call 'beamtalk_error':'with_hint'(Error1, #{#<85>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<112>(8,1,'integer',['unsigned'|['big']]),#<97>(8,1,'integer',['unsigned'|['big']]),#<119>(8,1,'integer',['unsigned'|['big']]),#<110>(8,1,'integer',['unsigned'|['big']]),#<87>(8,1,'integer',['unsigned'|['big']]),#<105>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']]),#<104>(8,1,'integer',['unsigned'|['big']]),#<58>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<105>(8,1,'integer',['unsigned'|['big']]),#<110>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<97>(8,1,'integer',['unsigned'|['big']]),#<100>(8,1,'integer',['unsigned'|['big']])}#) in
    call 'beamtalk_error':'raise'(Error2)

'superclass'/0 = fun () -> 'nil'


'class_name'/0 = fun () -> 'FutureStringInterpolation'


'init'/1 = fun (InitArgs) ->
    let DefaultState = ~{
        '__class_mod__' => 'future_string_interpolation'
        , 'name' => #{#<65>(8,1,'integer',['unsigned'|['big']]),#<108>(8,1,'integer',['unsigned'|['big']]),#<105>(8,1,'integer',['unsigned'|['big']]),#<99>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']])}#
        , 'age' => 25
        , 'firstName' => #{#<66>(8,1,'integer',['unsigned'|['big']]),#<111>(8,1,'integer',['unsigned'|['big']]),#<98>(8,1,'integer',['unsigned'|['big']])}#
        , 'lastName' => #{#<83>(8,1,'integer',['unsigned'|['big']]),#<109>(8,1,'integer',['unsigned'|['big']]),#<105>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']]),#<104>(8,1,'integer',['unsigned'|['big']])}#
        , 'emojiVar' => #{#<240>(8,1,'integer',['unsigned'|['big']]),#<159>(8,1,'integer',['unsigned'|['big']]),#<142>(8,1,'integer',['unsigned'|['big']]),#<137>(8,1,'integer',['unsigned'|['big']])}#
        , 'count' => 10
        , 'plain' => #{#<72>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<108>(8,1,'integer',['unsigned'|['big']]),#<108>(8,1,'integer',['unsigned'|['big']]),#<111>(8,1,'integer',['unsigned'|['big']]),#<44>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<87>(8,1,'integer',['unsigned'|['big']]),#<111>(8,1,'integer',['unsigned'|['big']]),#<114>(8,1,'integer',['unsigned'|['big']]),#<108>(8,1,'integer',['unsigned'|['big']]),#<100>(8,1,'integer',['unsigned'|['big']]),#<33>(8,1,'integer',['unsigned'|['big']])}#
    }~
    in let FinalState = call 'maps':'merge'(DefaultState, InitArgs)
    in {'ok', FinalState}


'handle_cast'/2 = fun (Msg, State) ->
    case Msg of
        <{'cast', CastSelector, CastArgs}> when 'true' ->
            case call 'future_string_interpolation':'safe_dispatch'(CastSelector, CastArgs, State) of
                <{'reply', _CastResult, CastNewState}> when 'true' ->
                    {'noreply', CastNewState}
                <{'error', CastError, _CastState}> when 'true' ->
                    let _ = call 'logger':'warning'(~{'selector' => CastSelector, 'reason' => CastError}~)
                    in {'noreply', State}
            end
        <_> when 'true' -> {'noreply', State}
    end


'handle_call'/3 = fun (Msg, _From, State) ->
    case Msg of
        <{Selector, Args}> when 'true' ->
            case call 'future_string_interpolation':'safe_dispatch'(Selector, Args, State) of
                <{'reply', Result, NewState}> when 'true' ->
                    {'reply', {'ok', Result}, NewState}
                <{'error', Error, NewState}> when 'true' ->
                    {'reply', {'error', Error}, NewState}
            end
    end


'handle_info'/2 = fun (Msg, State) ->
    call 'beamtalk_actor':'handle_info'(Msg, State)


'code_change'/3 = fun (OldVsn, State, Extra) ->
    call 'beamtalk_hot_reload':'code_change'(OldVsn, State, Extra)


'terminate'/2 = fun (Reason, State) ->
    %% Call terminate: method if defined — exceptions must not prevent shutdown
    let Self = call 'beamtalk_actor':'make_self'(State) in
    let _TermDisp = try call 'future_string_interpolation':'dispatch'('terminate:', [Reason], Self, State)
        of _TermOk -> 'ok'
        catch <_TermT, _TermE, _TermS> -> 'ok'
    in 'ok'


'safe_dispatch'/3 = fun (Selector, Args, State) ->
    let Self = call 'beamtalk_actor':'make_self'(State) in
    try call 'future_string_interpolation':'dispatch'(Selector, Args, Self, State)
    of Result -> Result
    catch <Type, Error, _Stacktrace> -> {'error', {Type, Error}, State}


'dispatch'/4 = fun (Selector, Args, Self, State) ->
    case Selector of
        <OtherSelector> when 'true' ->
            %% BT-229/ADR 0005: Check extension registry before hierarchy walk
            let ExtLookup = try call 'beamtalk_extensions':'lookup'('FutureStringInterpolation', OtherSelector)
                of ExtLookupResult -> ExtLookupResult
                catch <_EType, _EReason, _EStack> -> 'not_found'
            in
            case ExtLookup of
                <{'ok', ExtFun, _ExtOwner}> when 'true' ->
                    %% BT-1512: Pass State to extension, unwrap {Result, NewState}
                    let ExtReply = apply ExtFun(Args, Self, State) in
                    let ExtResult = call 'erlang':'element'(1, ExtReply) in
                    let ExtState = call 'erlang':'element'(2, ExtReply) in
                    {'reply', ExtResult, ExtState}
                <'not_found'> when 'true' ->
                    %% ADR 0006: Try hierarchy walk before DNU
                    case call 'beamtalk_dispatch':'super'(OtherSelector, Args, Self, State, 'FutureStringInterpolation') of
                        <{'reply', InheritedResult, InheritedState}> when 'true' ->
                            {'reply', InheritedResult, InheritedState}
                        <{'error', _DispatchError}> when 'true' ->
                            %% Not in hierarchy - try doesNotUnderstand:args: (BT-29)
                            let DnuSelector = 'doesNotUnderstand:args:' in
                            let Methods = call 'future_string_interpolation':'method_table'() in
                            case call 'maps':'is_key'(DnuSelector, Methods) of
                                <'true'> when 'true' ->
                                    call 'future_string_interpolation':'dispatch'(DnuSelector, [OtherSelector, Args], Self, State)
                                <'false'> when 'true' ->
                                    %% No DNU handler - return #beamtalk_error{} record
                                    let ClassName = 'FutureStringInterpolation' in
                                    let Error0 = call 'beamtalk_error':'new'('does_not_understand', ClassName) in
                                    let Error1 = call 'beamtalk_error':'with_selector'(Error0, OtherSelector) in
                                    let HintMsg = #{#<67>(8,1,'integer',['unsigned'|['big']]),#<104>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<99>(8,1,'integer',['unsigned'|['big']]),#<107>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<112>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<108>(8,1,'integer',['unsigned'|['big']]),#<108>(8,1,'integer',['unsigned'|['big']]),#<105>(8,1,'integer',['unsigned'|['big']]),#<110>(8,1,'integer',['unsigned'|['big']]),#<103>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<111>(8,1,'integer',['unsigned'|['big']]),#<114>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<117>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<39>(8,1,'integer',['unsigned'|['big']]),#<114>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<112>(8,1,'integer',['unsigned'|['big']]),#<111>(8,1,'integer',['unsigned'|['big']]),#<110>(8,1,'integer',['unsigned'|['big']]),#<100>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<84>(8,1,'integer',['unsigned'|['big']]),#<111>(8,1,'integer',['unsigned'|['big']]),#<58>(8,1,'integer',['unsigned'|['big']]),#<39>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']]),#<111>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<118>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<114>(8,1,'integer',['unsigned'|['big']]),#<105>(8,1,'integer',['unsigned'|['big']]),#<102>(8,1,'integer',['unsigned'|['big']]),#<121>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<109>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']]),#<104>(8,1,'integer',['unsigned'|['big']]),#<111>(8,1,'integer',['unsigned'|['big']]),#<100>(8,1,'integer',['unsigned'|['big']]),#<32>(8,1,'integer',['unsigned'|['big']]),#<101>(8,1,'integer',['unsigned'|['big']]),#<120>(8,1,'integer',['unsigned'|['big']]),#<105>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']]),#<116>(8,1,'integer',['unsigned'|['big']]),#<115>(8,1,'integer',['unsigned'|['big']])}# in
                                    let Error = call 'beamtalk_error':'with_hint'(Error1, HintMsg) in
                                    {'error', Error, State}
                            end
                    end
            end
    end


'method_table'/0 = fun () ->
    ~{}~


'has_method'/1 = fun (Selector) ->
    call 'lists':'member'(Selector, [])

end
